--- a/XTS/localjunit/pom.xml
+++ b/XTS/localjunit/pom.xml
@@ -193,6 +193,12 @@
                     <version>${jboss-as.version}</version>
                     <scope>test</scope>
                 </dependency>
+                <dependency>
+                    <groupId>org.jboss.xnio</groupId>
+                    <artifactId>xnio-api</artifactId>
+                    <version>${version.org.jboss.xnio}</version>
+                    <scope>test</scope>
+                </dependency>
             </dependencies>
         </profile>
         <profile>
@@ -226,6 +232,12 @@
                     <groupId>org.wildfly</groupId>
                     <artifactId>wildfly-arquillian-container-managed</artifactId>
                     <version>${jboss-as.version}</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.xnio</groupId>
+                    <artifactId>xnio-api</artifactId>
+                    <version>${version.org.jboss.xnio}</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
