--- a/pom.xml
+++ b/pom.xml
@@ -475,6 +475,7 @@
     <version.javax.annotation>1.2-b04</version.javax.annotation>
     <version.org.jboss.arquillian.osgi>2.0.0.CR2</version.org.jboss.arquillian.osgi>
     <version.org.jboss.jboss-transaction-spi>7.0.2.Final</version.org.jboss.jboss-transaction-spi>
+    <version.org.jboss.xnio>3.1.0.CR7</version.org.jboss.xnio>
 
     <!-- Maven plugin versions -->
     <version.org.eclipse.m2e.lifecycle-mapping>1.0.0</version.org.eclipse.m2e.lifecycle-mapping>
