--- a/STM/pom.xml
+++ b/STM/pom.xml
@@ -8,7 +8,7 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
   <groupId>org.jboss.narayana.stm</groupId>
-  <artifactId>core</artifactId>
+  <artifactId>stm</artifactId>
   <name>Narayana: STM</name>
   <url>http://maven.apache.org</url>
   <dependencies>
