JBTM-1665 Include apr.h for compilation issues on some platforms such as Centos5 x64

--- a/blacktie/integration-tests/pom.xml
+++ b/blacktie/integration-tests/pom.xml
@@ -275,6 +275,12 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+            <dependency>
+                <groupId>apr-1.contrib</groupId>
+                <classifier>${bpa}</classifier>
+                <artifactId>apr-1</artifactId>
+			<scope>test</scope>
+            </dependency>
 	</dependencies>
 	<properties>
 		<test.output.type>shared</test.output.type>
