--- a/blacktie/pom.xml
+++ b/blacktie/pom.xml
@@ -319,6 +319,11 @@
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.jboss.narayana.rts</groupId>
+				<artifactId>restat-bridge</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>apache-avalon-logkit</groupId>
 				<artifactId>logkit</artifactId>
 				<version>1.2-brew</version>
