--- a/rts/at/integration/pom.xml
+++ b/rts/at/integration/pom.xml
@@ -24,6 +24,13 @@
     <name>Narayana: restat integration</name>
     <description>REST-AT Integration</description>
 
+    <properties>
+        <ipv4.server.jvm.args></ipv4.server.jvm.args>
+        <ipv6.server.jvm.args>
+            -Djboss.bind.address=[::1] -Djboss.bind.address.management=[::1] -Djboss.bind.address.unsecure=[::1]
+            -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true
+        </ipv6.server.jvm.args>
+    </properties>
 
     <dependencies>
 
@@ -213,6 +220,12 @@
                             <includes>
                                 <include>**/*TestCase.java</include>
                             </includes>
+                            <systemPropertyVariables combine.children="append">
+                                <server.jvm.args>
+                                    ${jvm.args.other} ${jvm.args.memory} ${ipv4.server.jvm.args} ${jvm.args.debug}
+                                </server.jvm.args>
+                                <node.address>127.0.0.1</node.address>
+                            </systemPropertyVariables>
                         </configuration>
                     </plugin>
                     <plugin>
@@ -231,6 +244,71 @@
 									<outputDirectory>${project.build.directory}/test-classes/lib</outputDirectory>
                                 </configuration>
                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>arqIPv6</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-managed</artifactId>
+                    <version>${jboss-as.version}</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.arquillian.protocol</groupId>
+                    <artifactId>arquillian-protocol-servlet</artifactId>
+                    <version>${version.org.jboss.arquillian.core}</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.xnio</groupId>
+                    <artifactId>xnio-api</artifactId>
+                    <version>${version.org.jboss.xnio}</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <skip>false</skip>
+                            <includes>
+                                <include>**/*TestCase.java</include>
+                            </includes>
+                            <argLine>${ipv6.server.jvm.args}</argLine>
+                            <systemPropertyVariables combine.children="append">
+                                <server.jvm.args>
+                                    ${jvm.args.other} ${jvm.args.memory} ${ipv6.server.jvm.args} ${jvm.args.debug}
+                                </server.jvm.args>
+                                <node.address>[::1]</node.address>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy-dependencies</id>
+                                <phase>test-compile</phase>
+                                <goals>
+                                    <goal>copy-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <stripVersion>true</stripVersion>
+                                    <includeGroupIds>org.jboss.byteman</includeGroupIds>
+                                    <outputDirectory>${project.build.directory}/test-classes/lib</outputDirectory>
+                                </configuration>
+                            </execution>
                         </executions>
                     </plugin>
                 </plugins>
