--- a/blacktie/wildfly-blacktie/subsystem/pom.xml
+++ b/blacktie/wildfly-blacktie/subsystem/pom.xml
@@ -96,6 +96,11 @@
 
         <dependency>
             <groupId>org.wildfly</groupId>
+            <artifactId>wildfly-logging</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.wildfly</groupId>
             <artifactId>wildfly-subsystem-test</artifactId>
             <type>pom</type>
             <scope>test</scope>
