--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,13 @@
 		of the GNU Lesser General Public License, v.2.1 along with this distribution; 
 		if not, write to the Free Software Foundation, Inc., 51 Franklin Street, 
 		Fifth Floor, Boston, MA 02110-1301, USA. (C) 2009, @author JBoss Inc. (jonathan.halliday@redhat.com) -->
+
+  <parent>
+    <groupId>org.jboss</groupId>
+    <artifactId>jboss-parent</artifactId>
+    <version>11</version>
+  </parent>
+
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.narayana</groupId>
   <artifactId>narayana-all</artifactId>
@@ -177,13 +184,13 @@
       <url>https://repository.jboss.org/nexus/content/repositories/snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
+
   <build>
     <pluginManagement>
       <plugins>
         <plugin>
           <groupId>org.eclipse.m2e</groupId>
           <artifactId>lifecycle-mapping</artifactId>
-          <version>${version.org.eclipse.m2e.lifecycle-mapping}</version>
           <configuration>
             <lifecycleMappingMetadata>
               <pluginExecutions>
@@ -260,29 +267,8 @@
           </configuration>
         </plugin>
         <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>buildnumber-maven-plugin</artifactId>
-          <version>${version.org.codehaus.mojo.buildnumber-maven-plugin}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>build-helper-maven-plugin</artifactId>
-          <version>${version.org.codehaus.mojo.build-helper-maven-plugin}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>idlj-maven-plugin</artifactId>
-          <version>${version.org.codehaus.mojo.idlj-maven-plugin}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-javadoc-plugin</artifactId>
-          <version>${version.org.apache.maven.plugins.maven-javadoc-plugin}</version>
-        </plugin>
-        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
-          <version>${version.org.apache.maven.plugins.maven-shade-plugin}</version>
           <configuration>
             <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
           </configuration>
@@ -299,53 +285,28 @@
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>${version.org.apache.maven.plugins.maven-clean-plugin}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-enforcer-plugin</artifactId>
-          <version>${version.org.apache.maven.plugins.maven-enforcer-plugin}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>${version.org.apache.maven.plugins.maven-install-plugin}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>${version.org.apache.maven.plugins.maven-jar-plugin}</version>
-        <configuration>
-          <archive>
-            <manifestEntries>
-                <Implementation-Title>${project.name}</Implementation-Title>
-                <Implementation-URL>http://www.jboss.org/</Implementation-URL>
-                <Implementation-Vendor>JBoss by Red Hat, Inc.</Implementation-Vendor>
-                <Implementation-Vendor-Id>http://www.jboss.org/</Implementation-Vendor-Id>
-            </manifestEntries>
-          </archive>
-        </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-war-plugin</artifactId>
-          <version>${version.org.apache.maven.plugins.maven-war-plugin}</version>
+          <configuration>
+            <archive>
+              <manifestEntries>
+                  <Implementation-Title>${project.name}</Implementation-Title>
+                  <Implementation-URL>http://www.jboss.org/</Implementation-URL>
+                  <Implementation-Vendor>JBoss by Red Hat, Inc.</Implementation-Vendor>
+                  <Implementation-Vendor-Id>http://www.jboss.org/</Implementation-Vendor-Id>
+              </manifestEntries>
+            </archive>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>${version.org.apache.maven.plugins.maven-compiler-plugin}</version>
           <configuration>
-            <source>1.6</source>
-            <target>1.6</target>
             <compilerArgument>-AtranslationFilesPath=${project.basedir}/classes/</compilerArgument>
           </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>${version.org.apache.maven.plugins.maven-deploy-plugin}</version>
           <configuration>
             <skip>true</skip>
           </configuration>
@@ -353,25 +314,20 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>${version.org.apache.maven.plugins.maven-surefire-plugin}</version>
-            <configuration>
-              <forkMode>pertest</forkMode>
-              <workingDirectory>target/test-classes</workingDirectory>
-              <runOrder>alphabetical</runOrder>
-              <redirectTestOutputToFile>${testLogToFile}</redirectTestOutputToFile>
-              <inherited>true</inherited>
-              <includes>
-                <include>**/*.java</include>
-              </includes>
-            </configuration>
+          <configuration>
+            <forkMode>pertest</forkMode>
+            <workingDirectory>target/test-classes</workingDirectory>
+            <runOrder>alphabetical</runOrder>
+            <redirectTestOutputToFile>${testLogToFile}</redirectTestOutputToFile>
+            <inherited>true</inherited>
+            <includes>
+              <include>**/*.java</include>
+            </includes>
+          </configuration>
         </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-source-plugin</artifactId>
-          <version>${version.org.apache.maven.plugins.maven-source-plugin}</version>
-        </plugin>
-	</plugins>
+	    </plugins>
     </pluginManagement>
+
     <plugins>
       <plugin>
         <inherited>false</inherited>
@@ -413,6 +369,7 @@
       </plugin>
     </plugins>
   </build>
+
   <properties>
     <!-- IP stack configs. -->
     <testLogToFile>true</testLogToFile>
@@ -431,45 +388,38 @@
     
     <!-- External dependencies versions -->
     <jboss-as.version>8.0.0.Beta2-SNAPSHOT</jboss-as.version>    
-    <version.org.jboss.jbossas>1.0.4.Final</version.org.jboss.jbossas>
-    <version.org.jboss>7.0.0.Final</version.org.jboss>
-    <version.org.jboss.logmanager>1.4.1.Final</version.org.jboss.logmanager>
-    <version.org.jboss.logging.jboss-logging>3.1.0.GA</version.org.jboss.logging.jboss-logging>
-    <version.org.jboss.logging.jboss-logging-processor>1.0.0.Final</version.org.jboss.logging.jboss-logging-processor>
+    <version.org.jboss.logmanager>1.5.1.Final</version.org.jboss.logmanager>
+    <version.org.jboss.logging.jboss-logging>3.1.3.GA</version.org.jboss.logging.jboss-logging>
+    <version.org.jboss.logging.jboss-logging-processor>1.1.0.Final</version.org.jboss.logging.jboss-logging-processor>
     <version.org.jboss.integration>6.0.0.CR1</version.org.jboss.integration>
-    <version.org.jboss.netty>3.2.6.Final</version.org.jboss.netty>
-    <version.org.jboss.ironjacamar>1.0.9.Final</version.org.jboss.ironjacamar>
-    <version.org.jboss.remoting>2.5.3</version.org.jboss.remoting>
-    <version.org.jboss.ws>1.0.2.Alpha1</version.org.jboss.ws>
-    <version.org.jboss.resteasy>3.0.1.Final</version.org.jboss.resteasy>
-    <version.org.jboss.weld>2.0.0.CR4</version.org.jboss.weld>
-    <version.org.hornetq>2.3.0.CR1</version.org.hornetq>
+    <version.org.jboss.ironjacamar>1.1.1.Final</version.org.jboss.ironjacamar>
+    <version.org.jboss.ws>1.0.2.Final</version.org.jboss.ws>
+    <version.org.jboss.resteasy>3.0.5.Final</version.org.jboss.resteasy>
+    <version.org.jboss.weld>2.1.0.Final</version.org.jboss.weld>
+    <version.org.hornetq>2.3.9.Final</version.org.hornetq>
     <version.org.hibernate.javax.persistence>1.0.1.Final</version.org.hibernate.javax.persistence>
-    <version.org.jboss.spec.javax.interceptor>1.0.0.Alpha3</version.org.jboss.spec.javax.interceptor>
-    <version.org.jboss.spec.javax.transaction>1.0.0.Alpha3</version.org.jboss.spec.javax.transaction>
+    <version.org.jboss.spec.javax.interceptor>1.0.0.Final</version.org.jboss.spec.javax.interceptor>
+    <version.org.jboss.spec.javax.transaction>1.0.0.Final</version.org.jboss.spec.javax.transaction>
     <version.org.jboss.spec.javax.ejb>1.0.2.Final</version.org.jboss.spec.javax.ejb>
-    <version.org.jboss.spec.javax.interceptor>1.0.0.Alpha3</version.org.jboss.spec.javax.interceptor>
-    <version.org.jboss.spec.javax.servlet>1.0.1.Final</version.org.jboss.spec.javax.servlet>
-    <version.org.jboss.spec.jboss-javaee-6.0>3.0.1.Final</version.org.jboss.spec.jboss-javaee-6.0>
-    <version.org.jacorb.jacorb>2.3.1.jbossorg-1</version.org.jacorb.jacorb>
-    <version.org.jacorb.jacorb-idl-compiler>2.2.3</version.org.jacorb.jacorb-idl-compiler>
+    <version.org.jboss.spec.javax.servlet>1.0.2.Final</version.org.jboss.spec.javax.servlet>
+    <version.org.jboss.spec.jboss-javaee-6.0>3.0.2.Final</version.org.jboss.spec.jboss-javaee-6.0>
+    <version.org.jacorb.jacorb>2.3.2-jbossorg-5</version.org.jacorb.jacorb>
+    <version.org.jacorb.jacorb-idl-compiler>2.3.1</version.org.jacorb.jacorb-idl-compiler>
     <version.jacorb>2.3.1jboss.patch01-brew</version.jacorb>
-    <version.javax.annotation>1.2-b04</version.javax.annotation>
-    <version.javax.transaction>1.1</version.javax.transaction>
+    <version.javax.annotation>1.2</version.javax.annotation>
     <version.javax.enterprise>1.1</version.javax.enterprise>
     <version.javax.inject>1</version.javax.inject>
     <version.javax.servlet>2.5</version.javax.servlet>
-    <version.commons-codec>1.4</version.commons-codec>
     <version.commons-httpclient>3.1-jbossorg-1</version.commons-httpclient>
     <version.commons-logging>1.1.0.jboss</version.commons-logging>
-    <version.log4j>1.2.15</version.log4j>
-    <version.org.slf4j>1.6.1</version.org.slf4j>
+    <version.log4j>1.2.17</version.log4j>
+    <version.org.slf4j>1.7.2.jbossorg-1</version.org.slf4j>
     <version.dom4j>1.6.1</version.dom4j>
     <version.jfree>1.0.9</version.jfree>
-    <version.com.h2database>1.3.168</version.com.h2database>
-    <version.org.apache.tomcat>6.0.18</version.org.apache.tomcat>
-    <version.org.apache.ant>1.7.1</version.org.apache.ant>
-    <version.org.apache.httpcomponents>4.1.2</version.org.apache.httpcomponents>
+    <version.com.h2database>1.3.173</version.com.h2database>
+    <version.org.apache.tomcat>6.0.37</version.org.apache.tomcat>
+    <version.org.apache.ant>1.8.2</version.org.apache.ant>
+    <version.org.apache.httpcomponents>4.2.1</version.org.apache.httpcomponents>
     <version.com.sybase.jConnect>6.0</version.com.sybase.jConnect>
     <version.com.oracle>10.2.0.4</version.com.oracle>
     <version.com.ibm>9.7</version.com.ibm>
@@ -477,39 +427,21 @@
     <version.mysql>5.1.21</version.mysql>
     <version.com.microsoft.sqlserver>mssql2005_sqljdbc_2.0</version.com.microsoft.sqlserver>
     <version.sun.jdk>jdk</version.sun.jdk>
-    <version.asm>3.1</version.asm>
-    <version.com.sun.jersey>1.5</version.com.sun.jersey>
-    <version.com.sun.grizzly>1.9.18-i</version.com.sun.grizzly>
-    <version.org.codehaus.jettison>1.3.1</version.org.codehaus.jettison>
-    <version.junit>4.10</version.junit> 
+    <version.asm>3.3.1</version.asm>
+    <version.com.sun.jersey>1.9.1</version.com.sun.jersey>
+    <version.com.sun.grizzly>1.9.59</version.com.sun.grizzly>
+    <version.org.codehaus.jettison>1.3.4</version.org.codehaus.jettison>
+    <version.junit>4.11</version.junit>
     <version.org.jboss.byteman>2.1.3</version.org.jboss.byteman>
     <version.org.jboss.arquillian.core>1.0.3.Final</version.org.jboss.arquillian.core>
-    <version.javax.annotation>1.2-b04</version.javax.annotation>
-    <version.org.jboss.arquillian.osgi>2.0.0.CR2</version.org.jboss.arquillian.osgi>
     <version.org.jboss.jboss-transaction-spi>7.1.0.Final</version.org.jboss.jboss-transaction-spi>
     <version.org.jboss.xnio>3.1.0.CR7</version.org.jboss.xnio>
 
     <!-- Maven plugin versions -->
     <version.org.eclipse.m2e.lifecycle-mapping>1.0.0</version.org.eclipse.m2e.lifecycle-mapping>
-    <version.org.codehaus.mojo.buildnumber-maven-plugin>1.2</version.org.codehaus.mojo.buildnumber-maven-plugin>
-    <version.org.codehaus.mojo.build-helper-maven-plugin>1.8</version.org.codehaus.mojo.build-helper-maven-plugin>
-    <version.org.codehaus.mojo.idlj-maven-plugin>1.2.1</version.org.codehaus.mojo.idlj-maven-plugin>
     <version.org.codehaus.mojo.jboss-maven-plugin>1.5.0</version.org.codehaus.mojo.jboss-maven-plugin>
-    <version.org.codehaus.mojo.findbugs-maven-plugin>2.5.2</version.org.codehaus.mojo.findbugs-maven-plugin>
     <version.org.jboss.as.plugins.jboss-as-maven-plugin>7.4.Final</version.org.jboss.as.plugins.jboss-as-maven-plugin>
-    <version.org.apache.maven.plugins.maven-javadoc-plugin>2.9.1</version.org.apache.maven.plugins.maven-javadoc-plugin>
-    <version.org.apache.maven.plugins.maven-shade-plugin>2.1</version.org.apache.maven.plugins.maven-shade-plugin>
-    <version.org.apache.maven.plugins.maven-clean-plugin>2.5</version.org.apache.maven.plugins.maven-clean-plugin>
-    <version.org.apache.maven.plugins.maven-enforcer-plugin>1.3.1</version.org.apache.maven.plugins.maven-enforcer-plugin>
-    <version.org.apache.maven.plugins.maven-jar-plugin>2.4</version.org.apache.maven.plugins.maven-jar-plugin>
-    <version.org.apache.maven.plugins.maven-war-plugin>2.4</version.org.apache.maven.plugins.maven-war-plugin>
-    <version.org.apache.maven.plugins.maven-compiler-plugin>3.1</version.org.apache.maven.plugins.maven-compiler-plugin>
-    <version.org.apache.maven.plugins.maven-deploy-plugin>2.7</version.org.apache.maven.plugins.maven-deploy-plugin>
-    <version.org.apache.maven.plugins.maven-surefire-plugin>2.12.4</version.org.apache.maven.plugins.maven-surefire-plugin>
-    <version.org.apache.maven.plugins.maven-source-plugin>2.2.1</version.org.apache.maven.plugins.maven-source-plugin>
     <version.org.apache.maven.plugins.maven-antrun-plugin>1.7</version.org.apache.maven.plugins.maven-antrun-plugin>
-    <version.org.apache.maven.plugins.maven-install-plugin>2.4</version.org.apache.maven.plugins.maven-install-plugin>
-    <version.org.apache.maven.plugins.maven-site-plugin>3.2</version.org.apache.maven.plugins.maven-site-plugin>
   </properties>
   <modules>
     <module>ext</module>
@@ -566,7 +498,6 @@
                     <plugin>
                       <groupId>org.apache.maven.plugins</groupId>
                       <artifactId>maven-jar-plugin</artifactId>
-                      <version>${version.org.apache.maven.plugins.maven-jar-plugin}</version>
                       <configuration>
                         <classesDirectory>${project.build.directory}/generated-classes/emma/classes</classesDirectory>
                       </configuration>
@@ -584,7 +515,6 @@
                     <plugin>
                       <groupId>org.apache.maven.plugins</groupId>
                       <artifactId>maven-antrun-plugin</artifactId>
-                      <version>${version.org.apache.maven.plugins.maven-antrun-plugin}</version>
                       <executions>
                         <execution>
                           <id>instrument</id>
@@ -714,7 +644,6 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>findbugs-maven-plugin</artifactId>
-                        <version>${version.org.codehaus.mojo.findbugs-maven-plugin}</version>
                         <executions>
                             <execution>
                                 <id>findbugs</id>
@@ -731,7 +660,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-site-plugin</artifactId>
-                        <version>${version.org.apache.maven.plugins.maven-site-plugin}</version>
                         <configuration>
                             <reportPlugins>
                                 <plugin>
