--- a/pom.xml
+++ b/pom.xml
@@ -451,6 +451,9 @@
     <version.org.jboss.jboss-transaction-spi>7.1.0.Final</version.org.jboss.jboss-transaction-spi>
     <version.org.jboss.xnio>3.1.0.CR7</version.org.jboss.xnio>
 
+    <!-- qa testsuite with hornetq store -->
+    <version.org.jboss.netty>3.2.6.Final</version.org.jboss.netty>
+
     <!-- Maven plugin versions -->
     <version.org.codehaus.mojo.jboss-maven-plugin>1.5.0</version.org.codehaus.mojo.jboss-maven-plugin>
     <version.org.jboss.as.plugins.jboss-as-maven-plugin>7.4.Final</version.org.jboss.as.plugins.jboss-as-maven-plugin>
