--- a/qa/pom.xml
+++ b/qa/pom.xml
@@ -59,6 +59,7 @@
         <dependency>
             <groupId>org.jboss.netty</groupId>
             <artifactId>netty</artifactId>
+            <version>${version.org.jboss.netty}</version>
         </dependency>
 
     </dependencies>
