--- a/pom.xml
+++ b/pom.xml
@@ -396,7 +396,7 @@
                         -Dorg.jboss.byteman.transform.all
                         -javaagent:${project.build.directory}/lib/byteman.jar=listener:true
     </jvm.args.byteman>
-    <jvm.args.memory>-Xms64m -Xmx1024m -Xss1m -XX:MaxPermSize=512m</jvm.args.memory>
+    <jvm.args.memory>-Xms64m -Xmx1024m -XX:MaxPermSize=512m</jvm.args.memory>
     <jvm.args.debug>-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n</jvm.args.debug>
     <jvm.args.other>-server</jvm.args.other>
     
