--- a/blacktie/wildfly-blacktie/pom.xml
+++ b/blacktie/wildfly-blacktie/pom.xml
@@ -29,13 +29,13 @@
     <parent>
         <groupId>org.wildfly</groupId>
         <artifactId>wildfly-parent</artifactId>
-        <version>8.0.0.Beta2-SNAPSHOT</version>
+        <version>8.0.0.Final-SNAPSHOT</version>
     </parent>
 
     <artifactId>wildfly-blacktie-parent</artifactId>
     <name>WildFly: Blacktie Subsystem Parent</name>
 	<packaging>pom</packaging>
-	<version>8.0.0.Beta2-SNAPSHOT</version>
+	<version>8.0.0.Final-SNAPSHOT</version>
 
 	<modules>
 		<module>subsystem</module>
